<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">No products found.</string>
    <string name="empty_view_subtitle_text">Get started by adding a product.</string>
    <string name="list_quantity_available">Quantity available: %1$s</string>
    <string name="list_price">Price: $%1$s</string>
    <string name="category_product_info">Product Info</string>
    <string name="category_product_supplier">Product Supplier</string>
    <string name="category_product_image">Product Image</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity_available">Quantity Available</string>
    <string name="email">E-mail</string>
    <string name="action_save">Save</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="insert_product_successful">Product saved</string>
    <string name="insert_product_failed">Error saving product</string>
    <string name="insert_product_missing">Missing required information, please review and try again</string>
    <string name="add_product">Add Product</string>
    <string name="select_image">Select image...</string>
    <string name="please_select_image">Please select an image.</string>
    <string name="select_image_error">Error selecting image.</string>
    <string name="change_quantity">Change Quantity</string>
    <string name="track_sale">Track Sale</string>
    <string name="receive_shipment">Receive Shipment</string>
    <string name="other_actions">Other Actions</string>
    <string name="order_from_supplier">Order from supplier</string>
    <string name="delete_product">Delete product</string>
    <string name="available">%1$s available</string>
    <string name="product_details">Product Details</string>
    <string name="currency">$%1$s</string>
    <string name="update_product_successful">Product updated</string>
    <string name="update_product_failed">Error updating product</string>
    <string name="product_not_available">Product not available</string>
    <string name="supplier_email_subject">New order for %1$s</string>
    <string name="supplier_email_message">I would like to order a new shipment.</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error deleting product</string>
</resources>
