<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".AddProductActivity">

        <LinearLayout
            android:id="@+id/container_product_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product_info" />

            <LinearLayout style="@style/CategoryFieldsLayout">

                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/quantity_available"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_product_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product_supplier" />

            <LinearLayout style="@style/CategoryFieldsLayout">
                <EditText
                    android:id="@+id/edit_product_supplier"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product_image" />

            <LinearLayout style="@style/CategoryFieldsLayout">
                <ImageView
                    android:id="@+id/product_image_view"
                    style="@style/DisplayProductImage">
                </ImageView>

                <Button
                    android:id="@+id/load_image_button"
                    style="@style/SelectImageButton"
                    android:text="@string/select_image" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
